Add headers to individual section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   </head>
 
   <body>
+    <div id="footer">
+      <h3><a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
+      </h3>
+    </div>
+
     <div id="wrapper">
       <div id= "content">
         <div id="venn">
@@ -30,6 +35,7 @@
       </div>
 
       <div id= "about-me-content">
+        <h1 class="scarlett">ABOUT.ME.BRIE.MARIE</h1>
         <h2>I am a published poet turned creative coder, an art enthusiast and painter transforming personal aesthetic appeals into front-end web and mobile app design. I believe in inventing and reinventing myself often. When I was eleven, I trained myself to be left handed. I am a right-brain, big-picture thinker balancing the world of linear logic and reason. I am impassioned by efforts to reduce human trafficking, both locally and globally. I believe in dancing and laughing as much as possible. I love foggy mornings and espresso, making San Francisco and Seattle my two favorite cities.
         </h2>
 
@@ -37,6 +43,7 @@
       </div>
 
       <div id= "content">
+        <h1 class="scarlett">BRIE.MARIE.PORTFOLIO</h1>
         <h2>As a part of Dev Bootcamp's curriculum, I completed a solo app challenge in just three nights. I developed a web app, Artsee, which consumes the Brooklyn Museum API to allow for quick art searches based on a desired artist. A future feature of the app will be the integration of a music API that cross references a chosen artwork's creation date and plays music that could have possibly inspired the artist while at work on the piece.<br />
 
           <a id="artsee" href="https://github.com/briemarie/artsee">github.com/briemarie/artsee</a>
@@ -53,6 +60,7 @@
       </div>
 
       <div id="content">
+        <h1 class="scarlett">BRIE.MARIE.EDUCATION</h1>
         <div class="container">
           <div class="row">
             <div class="one-third column">
@@ -84,11 +92,6 @@
             <h2>* Fun fact about my education: I was homeschooled for most of my primary and secondary schooling, and graduated high school when I was sixteen.
             </h2>
         </div>
-      </div>
-
-      <div id="footer">
-        <h3><a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
-        </h3>
       </div>
     </div>
   </body>
