--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div id="wrapper">
       <div id="footer">
-        <h3><a  href="http://briemarie.me/aboutme.html">ABOUT ME</a>.<a href="http://briemarie.me/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.me/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.me/blog-journal.html">BLOG</a></span>
+        <h3><a  href="http://briemarie.github.io">HOME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
         </h3>
       </div>
 
@@ -93,6 +93,12 @@
             </h2>
         </div>
       </div>
+
+      <div id="footer">
+        <h3><a  href="http://briemarie.github.io">HOME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
+        </h3>
+      </div>
+
     </div>
   </body>
 </html>
