--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div id="wrapper">
       <div id="footer">
-        <h3><a  href="http://briemarie.github.io">HOME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
+        <h3><a  href="http://briemarie.me">HOME</a>.<a href="http://briemarie.me/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.me/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.me/blog-journal.html">BLOG</a></span>
         </h3>
       </div>
 
@@ -54,8 +54,8 @@
           <a id="vendable" href="https://github.com/briemarie/Vendable">github.com/briemarie/Vendable</a>
         </h2>
 
-        <h3 id="networks">FOR ADDITIONAL PROFESSIONAL INFORMATION, PLEASE CONNECT WITH ME THROUGH THE FOLLOWING NETWORKS:<br />
-          <a href="https://www.linkedin.com/pub/brittney-hodson/a3/237/123"><img class= "logo" src="../website-pics/linkedin.png" /></a><a href="https://github.com/briemarie"><img class= "logo" src="../website-pics/github.png"/></a><a href="https://twitter.com/briemarie5"><img class= "logo" src="../website-pics/twitter.png"/></a><a href="mailto:thebriemarie@gmail.com"><img class= "logo" src="../website-pics/gmail.png"/></a>
+        <h3 id="networks">FOR ADDITIONAL INFORMATION, PLEASE CONNECT WITH ME THROUGH THE FOLLOWING:<br />
+          <a href="https://www.linkedin.com/in/briemarie"><img class= "logo" src="../website-pics/linkedin.png" /></a><a href="https://github.com/briemarie"><img class= "logo" src="../website-pics/github.png"/></a><a href="https://twitter.com/briemarie5"><img class= "logo" src="../website-pics/twitter.png"/></a><a href="mailto:thebriemarie@gmail.com"><img class= "logo" src="../website-pics/gmail.png"/></a>
         </h3>
       </div>
 
@@ -93,12 +93,6 @@
             </h2>
         </div>
       </div>
-
-      <div id="footer">
-        <h3><a  href="http://briemarie.github.io">HOME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
-        </h3>
-      </div>
-
     </div>
   </body>
 </html>
