Change styling for better placement of venn and new nav bar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <div id="wrapper">
-      <div id="footer">
+      <div id="nav">
         <h3><a  href="http://briemarie.me">HOME</a>.<a href="http://briemarie.me/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.me/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.me/blog-journal.html">BLOG</a></span>
         </h3>
       </div>
