Add home section to separate it from the nav bar

--- a/index.html
+++ b/index.html
@@ -21,18 +21,21 @@
         </h3>
       </div>
 
-      <div id= "content">
-        <div id="venn">
-          <div class="circle left-circle">ARTS</div>
-          <div class="circle right-circle">TECH</div>
-        </div>
-        <hr>
-        <div class="magic">MAGIC</div>
-          <!-- <img src="../website-pics/artstechmagic.jpg" id="ven" /> -->
+      <section class="home">
+      <a id="about-me">&nbsp;</a>
+        <div id= "content">
+          <div id="venn">
+            <div class="circle left-circle">ARTS</div>
+            <div class="circle right-circle">TECH</div>
+          </div>
+          <hr>
+          <div class="magic">MAGIC</div>
+            <!-- <img src="../website-pics/artstechmagic.jpg" id="ven" /> -->
 
-        <h1>BRIE.MARIE</h1>
-        <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
-      </div>
+          <h1>BRIE.MARIE</h1>
+          <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
+        </div>
+      </section>
 
       <section class="about-me">
       <a id="about-me">&nbsp;</a>
