--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
 
       <section class="home">
-      <a id="about-me">&nbsp;</a>
+      <a id="home">&nbsp;</a>
         <div id= "content">
           <div id="venn">
             <div class="circle left-circle">ARTS</div>
