--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
         </h3>
       </div>
 
-      <section class="home">
-      <a id="home">&nbsp;</a>
+      <section class="home" id="home">
         <div id= "content">
           <div id="venn">
             <div class="circle left-circle">ARTS</div>
@@ -37,8 +36,7 @@
         </div>
       </section>
 
-      <section class="about-me">
-      <a id="about-me">&nbsp;</a>
+      <section class="about-me" id="about-me">
         <div id= "about-me-content">
           <h1 class="scarlett">ABOUT.ME.BRIE.MARIE</h1>
           <h2>I am a published poet turned creative coder, an art enthusiast and painter transforming personal aesthetic appeals into front-end web and mobile app design. I believe in inventing and reinventing myself often. When I was eleven, I trained myself to be left handed. I am a right-brain, big-picture thinker balancing the world of linear logic and reason. I am impassioned by efforts to reduce human trafficking, both locally and globally. I believe in dancing and laughing as much as possible. I love foggy mornings and espresso, making San Francisco and Seattle my two favorite cities.
@@ -48,8 +46,7 @@
         </div>
       </section>
 
-      <section class="portfolio">
-      <a id="portfolio">&nbsp;</a>
+      <section class="portfolio" id="portfolio">
         <div id= "content">
           <h1 class="scarlett">BRIE.MARIE.PORTFOLIO</h1>
           <h2>As a part of Dev Bootcamp's curriculum, I completed a solo app challenge in just three nights. I developed a web app, Artsee, which consumes the Brooklyn Museum API to allow for quick art searches based on a desired artist. A future feature of the app will be the integration of a music API that cross references a chosen artwork's creation date and plays music that could have possibly inspired the artist while at work on the piece.<br />
@@ -68,8 +65,7 @@
         </div>
       </section>
 
-      <section class="education">
-      <a id="education">&nbsp;</a>
+      <section class="education" id="education">
         <div id="content">
           <h1 class="scarlett">BRIE.MARIE.EDUCATION</h1>
           <div class="container">
