--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         </div>
         <hr>
         <div class="magic">MAGIC</div>
-          <!-- <img src="../website-pics/artstechmagic.jpg" id="ven" /> -->
 
         <h1>BRIE.MARIE</h1>
         <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
@@ -49,6 +48,7 @@
           <h1 class="scarlett">BRIE.MARIE.PORTFOLIO</h1>
           <h2>As a part of Dev Bootcamp's curriculum, I completed a solo app challenge in just three nights. I developed a web app, Artsee, which consumes the Brooklyn Museum API to allow for quick art searches based on a desired artist. A future feature of the app will be the integration of a music API that cross references a chosen artwork's creation date and plays music that could have possibly inspired the artist while at work on the piece.<br />
 
+            <img src="../website-pics/artsee.png"/>
             <a id="artsee" href="https://github.com/briemarie/artsee">github.com/briemarie/artsee</a>
           </h2>
 
