Experiement with modal 3

--- a/education.html
+++ b/education.html
@@ -23,13 +23,7 @@
   </head>
 
   <body>
-    <div id="wrapper">
-      <div id= "header">
-        <h1>BRIE.MARIE</h1>
-        <h2 class="scarlett">CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
-      </div>
-
-      <!-- Button trigger modal -->
+          <!-- Button trigger modal -->
       <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
         Modal
       </button>
@@ -50,7 +44,15 @@
         </div>
       </div>
 
-      <div id="content">
+    <div id="wrapper">
+      <div id= "header">
+        <h1>BRIE.MARIE</h1>
+        <h2 class="scarlett">CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
+      </div>
+
+
+
+      <!-- <div id="content">
         <div class="container">
           <div class="row">
             <div class="one-third column">
@@ -82,7 +84,7 @@
             <h2>* Fun fact about my education: I was homeschooled for most of my primary and secondary schooling, and graduated high school when I was sixteen.
             </h2>
         </div>
-      </div>
+      </div> -->
 
       <div id="footer">
         <h3><a  href="http://briemarie.github.io">HOME</a>.<a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
