Experiement with modal 5

--- a/education.html
+++ b/education.html
@@ -20,6 +20,9 @@
   </head>
 
   <body>
+<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#signin">
+  Sign In
+</button>
 <div class="modal fade" id="signin" tabindex="-1" role="dialog" aria-labelledby="signin-label" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
