--- a/education.html
+++ b/education.html
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    <button type="button" data-toggle="modal" data-target="#dbc"></button>
+    <button type="button" id="dbc-button" data-toggle="modal" data-target="#dbc"></button>
     <div class="modal fade" id="dbc" tabindex="-1" role="dialog" aria-labelledby="signin-label" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
