Experiement with modal- add modal toggle to image

--- a/education.html
+++ b/education.html
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    <button type="button" id="dbc-button" data-toggle="modal" data-target="#dbc"></button>
+    <img src="../website-pics/Dev-Bootcamp.png" width="20%" height="15%" data-toggle="modal" data-target="#dbc"/>
     <div class="modal fade" id="dbc" tabindex="-1" role="dialog" aria-labelledby="signin-label" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
