Experiement with modal- add class back to get modal to toggle

--- a/education.html
+++ b/education.html
@@ -31,7 +31,7 @@
       </div>
 
       <img src="../website-pics/Dev-Bootcamp.png" width="20%" height="15%" data-toggle="modal" data-target="#dbc"/>
-      <div id="dbc"aria-hidden="true">
+      <div class="modal fade" id="dbc"aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
@@ -44,7 +44,7 @@
       </div>
 
       <img src="../website-pics/ucberkeley.png" width="20%" height="15%" data-toggle="modal" data-target="#ucb"/>
-      <div id="ucb" aria-hidden="true">
+      <div class="modal fade" id="ucb" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
@@ -57,7 +57,7 @@
       </div>
 
       <img src="../website-pics/Mira_Costa_College_Logo_4c.png" width="20%" height="15%" data-toggle="modal" data-target="#mcc"/>
-      <div id="mcc" aria-hidden="true">
+      <div class="modal fade" id="mcc" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
