Experiment with modal tags

--- a/education.html
+++ b/education.html
@@ -26,12 +26,12 @@
       </div>
 
       <img src="../website-pics/Dev-Bootcamp.png" width="20%" height="15%" data-toggle="modal" data-target="#dbc"/>
-      <div class="modal fade" id="dbc"aria-hidden="true">
+      <div class="modal fade" id="dbc" aria-hidden="true">
         <div class="modal-dialog">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+          </div>
           <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-            </div>
             <h2>I graduated from Dev Bootcamp in San Francisco in January of 2015. I completed over 1000 hours of coding in the 18 week program, and feel confident and prepared to start work as a full-stack web and mobile app developer. Areas of focus included Ruby, server and client side Rails, Active Record, functional and OO JS, HTML5 and CSS3 design, single page apps with AJAX and jQuery, front-end AngularJS, and iOS mobile builds with Ionic.
             </h2>
           </div>
@@ -43,7 +43,7 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+              <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
             </div>
             <h2>I graduated with my BA in English from UC Berkeley in May of 2014. The emphasis of my studies was romantic and modern poetry, and I was awarded a spot in the Phi Beta Kappa Honor Society. While attending, I had four poems published in various literary magazines. I also helped found an all women's meditation group on campus, Fiat Lux for Women.
             </h2>
@@ -56,7 +56,7 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+              <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
             </div>
             <h2>I graduated from Mira Costa Community College in Oceanside, California with my AA in Social and Behavioral Sciences in May of 2012. The emphasis of my studies was in various areas of psychology, and I was awarded a spot in the Phi Theta Kappa Honor Society. I had my first poem published in a local literary magazine, and volunteered many hours helping with community activities sponsored by the astronomy department.
             </h2>
