Add img ids for css

--- a/education.html
+++ b/education.html
@@ -28,7 +28,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-4">
-            <img src="../website-pics/Dev-Bootcamp.png" width="20%" height="15%" data-toggle="modal" data-target="#dbc"/>
+            <img src="../website-pics/Dev-Bootcamp.png" id="dbc-img" data-toggle="modal" data-target="#dbc"/>
             <div class="modal fade" id="dbc" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
@@ -45,7 +45,7 @@
             </div>
           </div>
           <div class="col-md-4">
-          <img src="../website-pics/ucberkeley.png" width="20%" height="15%" data-toggle="modal" data-target="#ucb"/>
+          <img src="../website-pics/ucberkeley.png" id="berkeley-img" data-toggle="modal" data-target="#ucb"/>
             <div class="modal fade" id="ucb" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
@@ -62,7 +62,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <img src="../website-pics/Mira_Costa_College_Logo_4c.png" width="20%" height="15%" data-toggle="modal" data-target="#mcc"/>
+            <img src="../website-pics/Mira_Costa_College_Logo_4c.png" id="mcc-img"data-toggle="modal" data-target="#mcc"/>
             <div class="modal fade" id="mcc" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
