change id name so that it can be accessed properly

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="container">
             <div class="row">
               <div class="one-third column">
-                <img src="../website-pics/Dev-Bootcamp.png" id="dbc"/>
+                <img src="../website-pics/Dev-Bootcamp.png" id="dbcimg"/>
               </div>
               <div class="two-thirds column">
                 <h2>I graduated from Dev Bootcamp in San Francisco in January of 2015. I completed over 1000 hours of coding in the 18 week program, and feel confident and prepared to start work as a full-stack web and mobile app developer. Areas of focus included Ruby, server and client side Rails, Active Record, functional and OO JS, HTML5 and CSS3 design, single page apps with AJAX and jQuery, front-end AngularJS, and iOS mobile builds with Ionic.
@@ -82,12 +82,12 @@
                 </h2>
               </div>
               <div class="one-third column">
-                <img src="../website-pics/ucberkeley.png" id="berkeley"/>
+                <img src="../website-pics/ucberkeley.png" id="berkeleyimg"/>
               </div>
             </div>
             <div class="row">
               <div class="one-third column">
-                <img src="../website-pics/Mira_Costa_College_Logo_4c.png" id="mcc"/>
+                <img src="../website-pics/Mira_Costa_College_Logo_4c.png" id="mccimg"/>
               </div>
               <div class="two-thirds column">
                 <h2>I graduated from Mira Costa Community College in Oceanside, California with my AA in Social and Behavioral Sciences in May of 2012. The emphasis of my studies was in various areas of psychology, and I was awarded a spot in the Phi Theta Kappa Honor Society. I had my first poem published in a local literary magazine, and volunteered many hours helping with community activities sponsored by the astronomy department.
