--- a/education.html
+++ b/education.html
@@ -28,13 +28,13 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-4">
-            <img src="../website-pics/Dev-Bootcamp.png" id="dbc-img" data-toggle="modal" data-target="#dbc"/>
+            <img src="../website-pics/Dev-Bootcamp.png" id="dbcimg" data-toggle="modal" data-target="#dbc"/>
             <div class="modal fade" id="dbc" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
-                    <h2 class="modal-title">Dev Bootcamp, San Francisco</h2>
+                    <h2 class="modal-title">Dev Bootcamp</h2>
                   </div>
                   <div class="modal-body">
                     <h2>I graduated from Dev Bootcamp in San Francisco in January of 2015. I completed over 1000 hours of coding in the 18 week program, and feel confident and prepared to start work as a full-stack web and mobile app developer. Areas of focus included Ruby, server and client side Rails, Active Record, functional and OO JS, HTML5 and CSS3 design, single page apps with AJAX and jQuery, front-end AngularJS, and iOS mobile builds with Ionic.
@@ -45,7 +45,7 @@
             </div>
           </div>
           <div class="col-md-4">
-          <img src="../website-pics/ucberkeley.png" id="berkeley-img" data-toggle="modal" data-target="#ucb"/>
+          <img src="../website-pics/ucberkeley.png" id="berkeleyimg" data-toggle="modal" data-target="#ucb"/>
             <div class="modal fade" id="ucb" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
@@ -62,7 +62,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <img src="../website-pics/Mira_Costa_College_Logo_4c.png" id="mcc-img"data-toggle="modal" data-target="#mcc"/>
+            <img src="../website-pics/Mira_Costa_College_Logo_4c.png" id="mccimg"data-toggle="modal" data-target="#mcc"/>
             <div class="modal fade" id="mcc" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
