Add script tags for bootstrap

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8">
     <title>BRIE.MARIE</title>
 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+    <link rel="stylesheet" href="../stylesheets/bootstrap.css">
     <link rel="stylesheet" href="../stylesheets/normalize.css">
     <link rel="stylesheet" href="../stylesheets/website.css">
-    <link rel="stylesheet" href="../stylesheets/skeleton.css">
+
     <!--[if lt IE 9]>
       <link rel="stylesheet" href="../stylesheets/ie.css">
     <![endif]-->
@@ -129,5 +132,8 @@
         </div>
       </section>
     </div>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
   </body>
 </html>
