--- a/index.html
+++ b/index.html
@@ -126,9 +126,10 @@
             </div>
           </div>
 
-          <h2>* Fun fact about my education: I was homeschooled for most of my primary and secondary schooling, and graduated high school when I was sixteen.
-          </h2>
-
+          <div>
+            <h2>* Fun fact: I was homeschooled for most of my primary and secondary schooling, and graduated high school when I was sixteen.
+            </h2>
+          </div>
         </div>
       </section>
     </div>
