--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
           </div>
 
-          <div>
+          <div id="funfact">
             <h2>* Fun fact: I was homeschooled for most of my primary and secondary schooling, and graduated high school when I was sixteen.
             </h2>
           </div>
