Experiement with portfolio modal

--- a/index.html
+++ b/index.html
@@ -49,17 +49,49 @@
       <section class="portfolio" id="portfolio">
         <div id= "content">
           <h1 class="scarlett">BRIE.MARIE.PORTFOLIO</h1>
-          <h2>As a part of Dev Bootcamp's curriculum, I completed a solo app challenge in just three nights. I developed a web app, Artsee, which consumes the Brooklyn Museum API to allow for quick art searches based on a desired artist. A future feature of the app will be the integration of a music API that cross references a chosen artwork's creation date and plays music that could have possibly inspired the artist while at work on the piece.<br />
 
-            <p id="artseeimg"></p>
-            <a id="artsee" href="https://github.com/briemarie/artsee">github.com/briemarie/artsee</a>
-          </h2>
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-6">
+                <img src="../website-pics/artsee.png" id="artseeimg" data-toggle="modal" data-target="#art"/>
+                <div class="modal fade" id="art" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+                        <h2 class="modal-title">Artsee</h2>
+                      </div>
+                      <div class="modal-body">
+                        <h2>As a part of Dev Bootcamp's curriculum, I completed a solo app challenge in just three nights. I developed a web app, Artsee, which consumes the Brooklyn Museum API to allow for quick art searches based on a desired artist. A future feature of the app will be the integration of a music API that cross references a chosen artwork's creation date and plays music that could have possibly inspired the artist while at work on the piece.
+                        </h2>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+              <img src="../website-pics/vendable.png" id="vendableimg" data-toggle="modal" data-target="#vend"/>
+                <div class="modal fade" id="vend" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+                        <h2 class="modal-title">Vendable</h2>
+                      </div>
+                      <div class="modal-body">
+                        <h2>In order to graduate Dev Bootcamp, groups completed larger scale apps in under a week. My team's app, Vendable, was developed using a Node.js back-end and an AngluarJS/Ionic front-end mobile iOS design. The app is meant to simplify the grocery shopping experience in a big city— complete with a MongoDB of over 100 thousand items found at big chain grocery stores, the app allows a user to find stores based on a 5 mile radius and create a shopping list of desired items found at a selected store. The list pulls the data and updates the user's list with item prices and and a grand total. When the user is ready, the app uses the Google Maps API to route directions to the chosen store.
+                        </h2>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
-          <h2>In order to graduate Dev Bootcamp, groups completed larger scale apps in under a week. My team's app, Vendable, was developed using a Node.js back-end and an AngluarJS/Ionic front-end mobile iOS design. The app is meant to simplify the grocery shopping experience in a big city— complete with a MongoDB of over 100 thousand items found at big chain grocery stores, the app allows a user to find stores based on a 5 mile radius and create a shopping list of desired items found at a selected store. The list pulls the data and updates the user's list with item prices and and a grand total. When the user is ready, the app uses the Google Maps API to route directions to the chosen store.<br />
+          <a id="artsee" href="https://github.com/briemarie/artsee">github.com/briemarie/artsee</a>
 
-            <p id="vendableimg"></p>
-            <a id="vendable" href="https://github.com/briemarie/Vendable">github.com/briemarie/Vendable</a>
-          </h2>
+          <a id="vendable" href="https://github.com/briemarie/Vendable">github.com/briemarie/Vendable</a>
 
           <h3 id="networks">FOR ADDITIONAL INFORMATION, PLEASE CONNECT WITH ME THROUGH THE FOLLOWING:<br />
             <a href="https://www.linkedin.com/in/briemarie"><img class= "logo" src="../website-pics/linkedin.png" /></a><a href="https://github.com/briemarie"><img class= "logo" src="../website-pics/github.png"/></a><a href="https://twitter.com/briemarie5"><img class= "logo" src="../website-pics/twitter.png"/></a><a href="mailto:thebriemarie@gmail.com"><img class= "logo" src="../website-pics/gmail.png"/></a>
