Add links into grid

--- a/index.html
+++ b/index.html
@@ -87,11 +87,15 @@
                 </div>
               </div>
             </div>
+            <div class="row">
+              <div class="col-md-6">
+                <a id="artsee" href="https://github.com/briemarie/artsee">github.com/briemarie/artsee</a>
+              </div>
+              <div class="col-md-6">
+                <a id="vendable" href="https://github.com/briemarie/Vendable">github.com/briemarie/Vendable</a>
+              </div>
+            </div>
           </div>
-
-          <a id="artsee" href="https://github.com/briemarie/artsee">github.com/briemarie/artsee</a>
-
-          <a id="vendable" href="https://github.com/briemarie/Vendable">github.com/briemarie/Vendable</a>
 
           <h3 id="networks">FOR ADDITIONAL INFORMATION, PLEASE CONNECT WITH ME THROUGH THE FOLLOWING:<br />
             <a href="https://www.linkedin.com/in/briemarie"><img class= "logo" src="../website-pics/linkedin.png" /></a><a href="https://github.com/briemarie"><img class= "logo" src="../website-pics/github.png"/></a><a href="https://twitter.com/briemarie5"><img class= "logo" src="../website-pics/twitter.png"/></a><a href="mailto:thebriemarie@gmail.com"><img class= "logo" src="../website-pics/gmail.png"/></a>
