Add h2 tag to link for proper styling

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
             </div>
             <div class="row">
               <div class="col-md-6">
-                <a id="artsee" href="https://github.com/briemarie/artsee">github.com/briemarie/artsee</a>
+                <h2><a id="artsee" href="https://github.com/briemarie/artsee">github.com/briemarie/artsee</a></h2>
               </div>
               <div class="col-md-6">
-                <a id="vendable" href="https://github.com/briemarie/Vendable">github.com/briemarie/Vendable</a>
+                <h2><a id="vendable" href="https://github.com/briemarie/Vendable">github.com/briemarie/Vendable</a></h2>
               </div>
             </div>
           </div>
