Experiement with modal image as link

--- a/education.html
+++ b/education.html
@@ -28,7 +28,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-4">
-            <img src="../website-pics/Dev-Bootcamp.png" id="dbcimg" data-toggle="modal" data-target="#dbc"/>
+            <a href="#"><img src="../website-pics/Dev-Bootcamp.png" id="dbcimg" data-toggle="modal" data-target="#dbc"/></a>
             <div class="modal fade" id="dbc" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
