Add links to images only on education page

--- a/education.html
+++ b/education.html
@@ -45,7 +45,7 @@
             </div>
           </div>
           <div class="col-md-4">
-          <img src="../website-pics/ucberkeley.png" id="berkeleyimg" data-toggle="modal" data-target="#ucb"/>
+            <a href="#"><img src="../website-pics/ucberkeley.png" id="berkeleyimg" data-toggle="modal" data-target="#ucb"/></a>
             <div class="modal fade" id="ucb" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
@@ -62,7 +62,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <img src="../website-pics/Mira_Costa_College_Logo_4c.png" id="mccimg"data-toggle="modal" data-target="#mcc"/>
+            <a href="#"><img src="../website-pics/Mira_Costa_College_Logo_4c.png" id="mccimg"data-toggle="modal" data-target="#mcc"/></a>
             <div class="modal fade" id="mcc" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
