Experiment with a tag destination

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-md-6">
-                <img src="../website-pics/artsee.png" id="artseeimg" data-toggle="modal" data-target="#art"/>
+                <a href="#portfolio"><img src="../website-pics/artsee.png" id="artseeimg" data-toggle="modal" data-target="#art"/></a>
                 <div class="modal fade" id="art" aria-hidden="true">
                   <div class="modal-dialog">
                     <div class="modal-content">
@@ -70,7 +70,7 @@
                 </div>
               </div>
               <div class="col-md-6">
-              <img src="../website-pics/vendable.png" id="vendableimg" data-toggle="modal" data-target="#vend"/>
+                <a href="#portfolio"><img src="../website-pics/vendable.png" id="vendableimg" data-toggle="modal" data-target="#vend"/></a>
                 <div class="modal fade" id="vend" aria-hidden="true">
                   <div class="modal-dialog">
                     <div class="modal-content">
@@ -110,7 +110,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-md-4">
-                <img src="../website-pics/Dev-Bootcamp.png" id="dbcimg" data-toggle="modal" data-target="#dbc"/>
+                <a href="#education"><img src="../website-pics/Dev-Bootcamp.png" id="dbcimg" data-toggle="modal" data-target="#dbc"/></a>
                 <div class="modal fade" id="dbc" aria-hidden="true">
                   <div class="modal-dialog">
                     <div class="modal-content">
@@ -127,7 +127,7 @@
                 </div>
               </div>
               <div class="col-md-4">
-              <img src="../website-pics/ucberkeley.png" id="berkeleyimg" data-toggle="modal" data-target="#ucb"/>
+                <a href="#education"><img src="../website-pics/ucberkeley.png" id="berkeleyimg" data-toggle="modal" data-target="#ucb"/></a>
                 <div class="modal fade" id="ucb" aria-hidden="true">
                   <div class="modal-dialog">
                     <div class="modal-content">
@@ -144,7 +144,7 @@
                 </div>
               </div>
               <div class="col-md-4">
-                <img src="../website-pics/Mira_Costa_College_Logo_4c.png" id="mccimg"data-toggle="modal" data-target="#mcc"/>
+                <a href="#education"><img src="../website-pics/Mira_Costa_College_Logo_4c.png" id="mccimg"data-toggle="modal" data-target="#mcc"/></a>
                 <div class="modal fade" id="mcc" aria-hidden="true">
                   <div class="modal-dialog">
                     <div class="modal-content">
