Add bootstrap styling to ie.css

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
           <div class="container-fluid">
             <div class="row">
-              <div class="col-md-6 one-half column">
+              <div class="col-md-6">
                 <a href="#portfolio"><img src="../website-pics/artsee.png" id="artseeimg" data-toggle="modal" data-target="#art"/></a>
                 <div class="modal fade" id="art" aria-hidden="true">
                   <div class="modal-dialog">
@@ -69,7 +69,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 one-half column">
+              <div class="col-md-6">
                 <a href="#portfolio"><img src="../website-pics/vendable.png" id="vendableimg" data-toggle="modal" data-target="#vend"/></a>
                 <div class="modal fade" id="vend" aria-hidden="true">
                   <div class="modal-dialog">
@@ -88,10 +88,10 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-md-6 one-half column">
+              <div class="col-md-6">
                 <h2><a id="artsee" href="https://github.com/briemarie/artsee">github.com/briemarie/artsee</a></h2>
               </div>
-              <div class="col-md-6 one-half column">
+              <div class="col-md-6">
                 <h2><a id="vendable" href="https://github.com/briemarie/Vendable">github.com/briemarie/Vendable</a></h2>
               </div>
             </div>
@@ -109,7 +109,7 @@
 
           <div class="container-fluid">
             <div class="row">
-              <div class="col-md-4 one-third column">
+              <div class="col-md-4">
                 <a href="#education"><img src="../website-pics/Dev-Bootcamp.png" id="dbcimg" data-toggle="modal" data-target="#dbc"/></a>
                 <div class="modal fade" id="dbc" aria-hidden="true">
                   <div class="modal-dialog">
@@ -126,7 +126,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-4 one-third column">
+              <div class="col-md-4">
                 <a href="#education"><img src="../website-pics/ucberkeley.png" id="berkeleyimg" data-toggle="modal" data-target="#ucb"/></a>
                 <div class="modal fade" id="ucb" aria-hidden="true">
                   <div class="modal-dialog">
