Remove forgotten class tag

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-4 one-third column">
+              <div class="col-md-4">
                 <a href="#education"><img src="../website-pics/Mira_Costa_College_Logo_4c.png" id="mccimg"data-toggle="modal" data-target="#mcc"/></a>
                 <div class="modal fade" id="mcc" aria-hidden="true">
                   <div class="modal-dialog">
