Add margin to push education grid further away from headline

--- a/education.html
+++ b/education.html
@@ -25,7 +25,7 @@
         <h2 class="scarlett">CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
       </div>
 
-      <div class="container-fluid">
+      <div class="container-fluid my-edu">
         <div class="row">
           <div class="col-md-4">
             <a href="#"><img src="../website-pics/Dev-Bootcamp.png" id="dbcimg" data-toggle="modal" data-target="#dbc"/></a>
