Fix weird h1 normalizing, and experiment with header on landing page

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
           <hr>
           <div class="magic">MAGIC</div>
 
-          <h1>BRIE.MARIE</h1>
-          <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
+          <h1>BRIE.MARIE <br /> CODER.PAINTER.POET.TRAVELER.GIGGLER</h1>
         </div>
       </section>
 
